@@ -70,6 +70,7 @@ version <next>:
 - colorize filter
 - CRI parser
 - aexciter audio filter
+- exposure video filter
 
 
 version 4.3:
